--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,11 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.'Rishant' }}
-        password: ${{ secrets.'RishantShukla' }}
+        username: ${{ secrets.'RishantShukla' }}
+        password: ${{ secrets.'26Apr2002@' }}
 
     - name: Push Docker image
       uses: docker/build-push-action@v5
       with:
           push: true
-          tags: ${{ secrets.'Rishant' }}/app:latest
+          tags: ${{ secrets.'RishantShukla' }}/app:latest
