--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,17 +42,17 @@ jobs:
     - name: Install
       run: mvn install
 
-    - name: Build Docker image
-      run: docker build -t yourusername/yourappname:${{github.sha}} .
+    # - name: Build Docker image
+    #   run: docker build -t yourusername/yourappname:${{github.sha}} .
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{secrets.RishantShukla}}
-        password: ${{secrets.26Apr2002@}}
+    # - name: Log in to Docker Hub
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{secrets.RishantShukla}}
+    #     password: ${{secrets.26Apr2002@}}
 
-    - name: Push Docker image
-      uses: docker/build-push-action@v5
-      with:
-          push: true
-          tags: ${{secrets.RishantShukla}}/app:latest
+    # - name: Push Docker image
+    #   uses: docker/build-push-action@v5
+    #   with:
+    #       push: true
+    #       tags: ${{secrets.RishantShukla}}/app:latest
