--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,17 @@ jobs:
     #   with:
     #       push: true
     #       tags: ${{secrets.RishantShukla}}/app:latest
+    - name: Build Docker image
+      run: docker build -t rishantshukla/ubuntu:${{ github.sha }} .
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: RishantShukla
+        password: 26Apr2002@
+
+    - name: Push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: rishantshukla/ubuntu:latest
