--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: RishantShukla
-        password: ${{ secrets.26Apr2002@ }}
+        password: 26Apr2002@
 
     - name: Push Docker image
       uses: docker/build-push-action@v5
